NetworkPolicy/netpol-def.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db      # linked/attached to DB
  policyTypes:
    - Ingress   # only allow traffic from the API pod
    - Egress    # allow traffic from db to connect to another pod/external server
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: api-pod
        namespaceSelector:    # only allow from namespace. must have this label set in the namespace
          matchLabels:
            name: prod
      - ipBlock:
          cidr: 192.168.5.10/32   # allow from these IP addresses
      ports: 
        - protocol: TCP
          port: 3306
  egress:   # allows traffic originating from db pod to an external server
    - to:
      - ipBlock:
          cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 80
